Fix aligning bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,32 @@
 *{
     margin: 0;
-    height: 100%;
+    color: #222222;
+}
+
+h1 {
+    font-family: 'Raleway', sans-serif;
+}
+
+.container {
+    position: relative;
+}
+
+.background-row {
+    position: absolute;
+    z-index: 5;
+}
+
+.content-row {
+    position: relative;
+    z-index: 10;
+}
+
+.inline-header {
+    display: inline-block;
 }
 
 #section1 {
-    background-color: red;
+    background-color: #ecf0f1;
 }
 
 #section2 {
